tentando fazer informação da loja

--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <img id="logo" src="/imgs/favicon.png" alt="SwiftSport logo">
-        <p><strong>SwiftSport</strong></p>
+        <h1>SwiftSport</h1>
     </header>
-    <div class="container">
+    <div class="container-links">
         <ul id="links">
             <li><a href="/index.html"><img id="icon" src="/imgs/favicon.png" alt="icon"> Início <img id="icon" src="/imgs/favicon.png" alt="icon"></a></li>
             <li><a href="/esporte/lacrosse/index.html">🥍 Lacrosse 🥍</a></li>
