--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 <body>
     <header>
         <img id="logo" src="/imgs/favicon.png" alt="SwiftSport logo">
-        <p><strong>SwiftSport</strong></p>
+        <h1>SwiftSport</h1>
     </header>
-    <div class="container">
+    <div class="container-links">
         <ul id="links">
             <li><a href="/esporte/basquete/index.html">🏀 Basquete 🏀</a></li>
             <li><a href="/esporte/lacrosse/index.html">🥍 Lacrosse 🥍</a></li>
             <li><a href="/esporte/volei/index.html">🏐 Vôlei 🏐</a></li>
         </ul>
     </div>
+    <section class="info">
+        <h1>Nossa loja</h1>
+        <hr>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsum est hic quam sed repellendus, explicabo 
+            consectetur quaerat, tenetur provident nemo alias. Fugiat aliquid ad in, molestias vero optio non.
+        </p>
+    </section>
 </body>
 </html>
