--- a/index.html
+++ b/index.html
@@ -21,11 +21,43 @@
     </div>
     <section class="info">
         <h1>Nossa loja</h1>
+
         <hr>
+
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsum est hic quam sed repellendus, explicabo 
-            consectetur quaerat, tenetur provident nemo alias. Fugiat aliquid ad in, molestias vero optio non.
+            <strong>SwiftSport</strong> é uma loja fictícia de produtos esportivos especializados em basquete, lacrosse e vôlei.
+             A loja foi fundada em 2023 por dois ex-atletas universitários, que queriam criar um espaço onde os fãs desses esportes 
+             pudessem encontrar tudo o que precisam para praticar seu esporte favorito.
         </p>
+        <br>
+        <p>
+            A SwiftSport oferece uma ampla variedade de produtos, incluindo:
+        </p>
+        <br>
+        <ul>
+            <li><strong>Basquete:</strong>cestas, uniformes, tênis, acessórios</li>
+            <li><strong>Lacrosse:</strong> tacos, bolas, uniformes, equipamentos de proteção, acessórios</li>
+            <li><strong>Vôlei:</strong> bolas, redes, uniformes, tênis, acessórios</li>
+        </ul>
+        
+        A loja também oferece serviços de personalização, como estamparia de nomes e números em uniformes e bolas.
+
+        Visão: A SwiftSport é uma loja de produtos esportivos que oferece aos seus clientes uma experiência única e personalizada. A loja se compromete a fornecer aos seus clientes os melhores produtos e serviços possíveis, para que eles possam se concentrar no que mais importa: jogar.
+
+        Missão: A missão da SwiftSport é inspirar os fãs de basquete, lacrosse e vôlei a praticarem seus esportes favoritos. A loja acredita que o esporte é uma ferramenta poderosa para promover a saúde, a fitness e a comunidade.
+
+        Valores: A SwiftSport é comprometida com os seguintes valores:
+
+        Excelência: A loja se esforça para oferecer aos seus clientes os melhores produtos e serviços possíveis.
+        Inovação: A loja está sempre procurando novas maneiras de melhorar a experiência de seus clientes.
+        Comunidade: A loja acredita que o esporte é uma força para o bem na comunidade.
+        Localização: A SwiftSport está localizada em uma cidade grande no Brasil. A loja está aberta de segunda a sexta-feira, das 9h às 19h, e aos sábados, das 10h às 18h.
+
+        Site: O site da SwiftSport oferece uma variedade de informações sobre os produtos e serviços da loja. O site também permite que os clientes façam compras online.
+
+        Redes sociais: A SwiftSport está ativa nas redes sociais, onde compartilha notícias, informações e promoções.
+
+        Contato: Os clientes podem entrar em contato com a SwiftSport pelo telefone, e-mail ou redes sociais.
     </section>
 </body>
 </html>
