--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <hr>
 
         <p>
-            <strong>SwiftSport</strong> é uma loja fictícia de produtos esportivos especializados em basquete, lacrosse e vôlei.
-            A loja foi fundada em 2023 por três ex-atletas universitários, Walisson Fernandes, Elvis Caires e Guilherme Figueiredo, 
-            que queriam criar um espaço onde os fãs desses esportes pudessem encontrar aquilo o que precisam para praticar seu esporte favorito.
+            <strong>SwiftSport</strong> é uma loja de produtos esportivos especializados em basquete, lacrosse e vôlei.
+            A loja foi fundada em 2023 por três ex-atletas universitários que queriam criar um espaço onde os fãs desses 
+            esportes pudessem encontrar aquilo o que precisam para praticar seu esporte favorito.
+            Nossa loja fica localizada no endereço Rua Donerio Pereira Da Silva, 561 - Salinas, MG, 39560-000. abrimos de 
+            segunda à sexta das 07 as 18 horas e nos sábados das 08 as 15 horas.
         </p>
         <br>
         <p>A <strong>SwiftSport</strong> oferece uma ampla variedade de produtos, incluindo:</p>
@@ -36,6 +38,85 @@
             <li><p><strong>Lacrosse:</strong> tacos, bolas e equipamentos de proteção</p></li>
             <li><p><strong>Vôlei:</strong> bolas, redes e manguitos</p></li>
         </ul>
+        <br>
+
+        <img class="imagens-menu" src="/imgs/interior-1.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+        <img class="imagens-menu" src="/imgs/interior-2.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+        <img class="imagens-menu" src="/imgs/interior-3.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+
+        <iframe class="imagens-menu" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d958.0313389296309!2d-42.295522530380104!3d-16.16248459903314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTbCsDA5JzQ0LjkiUyA0MsKwMTcnNDEuNiJX!5e0!3m2!1spt-BR!2sbr!4v1698376693323!5m2!1spt-BR!2sbr"
+        style="width: 400px; height: 500px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+        <h1>Nossos produtos</h1>
+        <hr>
+
+        <p>Veja aqui alguns de nossos produtos:</p>
+
+        <div class="container-imagens">
+            <a href="/esporte/basquete/index.html">
+                <img class="imagens-menu" src="/imgs/bola_basquete.jpg" alt="Bola de basquete">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Em nosso estabelecimento, possuímos a venda as melhores bolas de basquete
+                    de toda a região, além de uniformes de múltiplas cores e cestas de alta qualidade.
+                </p>
+            </div>
+        </div>
+
+        <div class="container-imagens">
+            <a href="/esporte/lacrosse/index.html">
+                <img class="imagens-menu" src="/imgs/protecao_lacrosse.jpg" alt="Equipamento de proteção para lacrosse">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Também possuímos em estoque o melhor em equipamentos para lacrosse, com tacos leves
+                    e resistentes, equipamentos de proteção que garantem mobilidade e resistência em
+                    meio a partida, além de bolas de diferentes cores fabricadas dos melhores materiais do mercado.
+                </p>
+            </div>
+        </div>
+
+        <div class="container-imagens">
+            <a href="/esporte/volei/index.html">
+                <img class="imagens-menu" src="/imgs/manguito.jpg" alt="Manguitos para vôlei">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Também estamos no mercado de artigos focados no vôlei, com bolas com padrão de qualidade respeitável,
+                    redes que podem ser utilizadas em qualquer ambiente além de manguitos confortáveis e de materiais que
+                    filtram os raios UV, mantendo você fresco até a vitória.
+                </p>
+            </div>
+        </div>
+
+        <h1>Formas de pagamento e fundadores</h1>
+        <hr>
+
+        <p>A nossa loja é bem aberta quanto às formas de pagamento, tendo como opções:</p>
+
+        <ul>
+            <li>Dinheiro;</li>
+            <li>Débito;</li>
+            <li>Crédito (parcelamos em até 6x);</li>
+            <li>Pix.</li>
+        </ul>
+        <br>
+
+        <p>Nossa loja só foi possível graças a junção de três amigos:</p>
+        <br>
+
+        <ul>
+            <li>Walisson Fernandes,</li>
+            <li>Elvis Caires e</li>
+            <li>Guilherme Figueiredo,</li>
+        </ul>
+        <br>
+        
+        <p>que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
+
     </section>
+
 </body>
 </html>
