--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -19,5 +19,113 @@
             <li><a href="/esporte/volei/index.html">🏐 Vôlei 🏐</a></li>
         </ul>
     </div>
+
+    <section class="info-loja">
+        <h1>O basquete</h1>
+        <hr>
+
+        <p>
+            O basquete é um esporte coletivo que surgiu nos Estados Unidos em 1891. É um dos <strong>esportes mais populares do mundo,</strong> 
+            com mais de 450 milhões de praticantes em mais de 200 países. O objetivo do jogo é marcar mais pontos que o adversário, 
+            arremessando a bola na cesta adversária. A bola pode ser movimentada pelo campo apenas com as mãos, 
+            e os jogadores não podem pisar na linha de fundo ou na linha lateral.
+            O basquete é um esporte dinâmico e emocionante, que exige habilidades físicas, técnicas e mentais. 
+            É um esporte que pode ser praticado por pessoas de todas as idades e níveis de habilidade.
+        </p>
+        <br>
+
+        <p>Aqui na SwiftSport, você encontra tudo o que precisa para praticar basquete com <strong>qualidade e estilo.</strong>
+        <br>
+
+        <p>Veja algumas <strong>Curiosidades</strong> sobre o basquete:</p>
+        <br>
+
+        <ul>
+            <li><p>O basquete foi inventado por James Naismith, um professor de educação física de Springfield, Massachusetts.</p></li>
+            <li><p>O jogador que marcou mais pontos em uma única partida foi Wilt Chamberlain, com 100 pontos.</p></li>
+            <li><p>O basquete é o esporte mais popular nos Estados Unidos, Brasil, China e Espanha.</p></li>
+            <li><p>Alguns de seu jogadores mais conhecidos são Michael Jordan, LeBron James, Bill Russell, Charles Barkley, Dirk Nowitzki, Jerry West, John Stockton, entre outros.</p></li>
+            <li><p>Os campeonatos mais famosos são NBA, EuroLeague, etc.</p></li>
+
+        </ul>
+        <br>
+
+        <img class="imagens-menu" src="/imgs/interior-1.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+        <img class="imagens-menu" src="/imgs/interior-2.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+        <img class="imagens-menu" src="/imgs/interior-3.jpg" alt="Interiores da loja" style="width: 400px; height: 500px; margin-right: 20px;">
+
+        <iframe class="imagens-menu" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d958.0313389296309!2d-42.295522530380104!3d-16.16248459903314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTbCsDA5JzQ0LjkiUyA0MsKwMTcnNDEuNiJX!5e0!3m2!1spt-BR!2sbr!4v1698376693323!5m2!1spt-BR!2sbr"
+        style="width: 400px; height: 500px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+        <h1>Nossos produtos</h1>
+        <hr>
+
+        <p>Veja aqui alguns de nossos produtos:</p>
+
+        <div class="container-imagens">
+            <a href="/esporte/basquete/index.html">
+                <img class="imagens-menu" src="/imgs/bola_basquete.jpg" alt="Bola de basquete">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Em nosso estabelecimento, possuímos a venda as melhores bolas de basquete
+                    de toda a região, além de uniformes de múltiplas cores e cestas de alta qualidade.
+                </p>
+            </div>
+        </div>
+
+        <div class="container-imagens">
+            <a href="/esporte/lacrosse/index.html">
+                <img class="imagens-menu" src="/imgs/cesta_basquete.jpg" alt="Equipamento de proteção para lacrosse">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Também possuímos em estoque o melhor em equipamentos para lacrosse, com tacos leves
+                    e resistentes, equipamentos de proteção que garantem mobilidade e resistência em
+                    meio a partida, além de bolas de diferentes cores fabricadas dos melhores materiais do mercado.
+                </p>
+            </div>
+        </div>
+
+        <div class="container-imagens">
+            <a href="/esporte/volei/index.html">
+                <img class="imagens-menu" src="/imgs/manguito.jpg" alt="Manguitos para vôlei">
+            </a>
+            <div class="container-imagens-texto">
+                <p>
+                    Também estamos no mercado de artigos focados no vôlei, com bolas com padrão de qualidade respeitável,
+                    redes que podem ser utilizadas em qualquer ambiente além de manguitos confortáveis e de materiais que
+                    filtram os raios UV, mantendo você fresco até a vitória.
+                </p>
+            </div>
+        </div>
+
+        <h1>Formas de pagamento e fundadores</h1>
+        <hr>
+
+        <p>A nossa loja é bem aberta quanto às formas de pagamento, tendo como opções:</p>
+
+        <ul>
+            <li>Dinheiro;</li>
+            <li>Débito;</li>
+            <li>Crédito (parcelamos em até 6x);</li>
+            <li>Pix.</li>
+        </ul>
+        <br>
+
+        <p>Nossa loja só foi possível graças a junção de três amigos:</p>
+        <br>
+
+        <ul>
+            <li>Walisson Fernandes,</li>
+            <li>Elvis Caires e</li>
+            <li>Guilherme Figueiredo,</li>
+        </ul>
+        <br>
+        
+        <p>que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
+
+    </section>
 </body>
 </html>
