Página basquete concluída

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <h1>Formas de pagamento e fundadores</h1>
+        <h1>Formas de pagamento</h1>
         <hr>
 
         <p>A nossa loja é bem aberta quanto às formas de pagamento, tendo como opções:</p>
@@ -103,6 +103,9 @@
             <li>Pix.</li>
         </ul>
         <br>
+
+        <h1>Fundadores</h1>
+        <hr>
 
         <p>Nossa loja só foi possível graças a junção de três amigos:</p>
         <br>
