Conclusão página lacrosse - add links basquete

--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -34,6 +34,14 @@
         </p>
         <br>
 
+        <p>Para mais informações, visite:</p>
+        <ul>
+            <li><a href="https://pt.wikipedia.org/wiki/Basquetebol">Basquetebol - <em>Wikipédia</em></a></li>
+            <li><a href="https://www.todamateria.com.br/basquetebol/">Basquetebol: origem, história e regras - <em>Toda Matéria</em></a></li>
+            <li><a href="https://www.nba.com/">Site oficial da <em>NBA</em></a></li>
+        </ul>
+        <br>
+
         <p>Aqui na SwiftSport, você encontra tudo o que precisa para praticar basquete com <strong>qualidade e estilo.</strong>
         <br>
 
@@ -140,7 +148,7 @@
         </ul>
         <br>
         
-        <p>que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
+        <p style="margin-bottom: 20px;">que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
 
     </section>
 </body>
