--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </ul>
         <br>
         
-        <p>que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
+        <p style="margin-bottom: 20px;">que juntos fundaram um negócio de sucesso que vende apenas produtos de impecável qualidade para seus queridos clientes.</p>
 
     </section>
 
