preparação para deploy

--- a/esporte/lacrosse/index.html
+++ b/esporte/lacrosse/index.html
@@ -37,7 +37,7 @@
         <ul>
             <li><a href="https://pt.wikipedia.org/wiki/Lacrosse">Lacrosse - <em>Wikipédia</em></a></li>
             <li><a href="https://www.todoestudo.com.br/educacao-fisica/lacrosse">Lacrosse: conheça sua história, suas regras e funções - <em>Todo Estudo</em></a></li>
-            <li><a href="https://www.nba.com/">Site oficial da <em>NBA</em></a></li>
+            <li><a href="https://lacrossebrasil.blogspot.com/">Blog oficial da <em>Lacrosse Brasil</em></a></li>
         </ul>
         <br>
 
